Fixed auth in swagger doc
